# prediction-market-bot

./: .env.example  .gitignore  .relayer_rate_limit  PLAN.md  README.md  analyze_dual_side.py  backtest.py  backtest_core.py  backtest_limit.py  backtest_strategies.py  calibration_analysis.py  clean_data.py  cross_asset_pca.py  dashboard.py  dashboard_paper_trades.jsonl  dashboard_signal_worker.py  data  display.py  distribution_fit.ipynb  experimental_filtration.py  explore.ipynb  features.py  feeds.py  filtration_model.pkl  filtration_model.py  job.txt  latency_findings.md  live_redemption_queue_btc.json  live_redemption_queue_eth.json  live_trader.py  market_api.py  market_config.py  model_validation.ipynb  optimize_kou_5m.py  orders.py  paper_trader.py  parquet_kind.py  pyproject.toml  recorder.py  recording.py  (+20 more)
.ipynb_checkpoints/: explore-checkpoint.ipynb
analysis/: analyze_dual_side.py  analyze_oracle_data.py  analyze_ou.py  analyze_parity.py  analyze_parity_extras.py  analyze_trader.py  analyze_zscore.py  calibration_analysis.py  cross_asset_research.py  explore.ipynb  fill_analysis.py  hmm_regime.py  lag_backtest.py  optimize_kou_5m.py  oracle_lag_test.py  polymarket_btc_15m.py  polymarket_rest_backfill.py  replay_extreme_divergence.py  replay_live_windows.py  replay_parity_experiments.py  run_backtest_all.py  run_paper_all.py  run_recorder_all.py  sigma_analysis_2w.py  sigma_lookback_research.py  sweep_threshold.py  test_filter_combinations.py  (+1 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: book.rs  client.rs  feed.rs  lib.rs  types.rs
(+156 files in other folders)
