[package]
name = "polybot-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "polybot_core"
crate-type = ["cdylib"]

[dependencies]
polyfill-rs = { git = "https://github.com/floor-licker/polyfill-rs", features = ["stream"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
rust_decimal = "1.36"
alloy-primitives = "1"

[profile.release]
lto = true
codegen-units = 1
